src/test/ui/mismatched_types/closure-arg-type-mismatch.base.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:7:14
   |
LL |     a.iter().map(|_: (u32, u32)| 45);
   |              ^^^ ------------------ found signature of `fn((u32, u32)) -> _`
   |              |
   |              expected signature of `fn(&(u32, u32)) -> _`
   |
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         F: FnMut(Self::Item) -> B,
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`

error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:8:14
   |
LL |     a.iter().map(|_: &(u16, u16)| 45);
   |              ^^^ ------------------- found signature of `for<'r> fn(&'r (u16, u16)) -> _`
   |              |
   |              expected signature of `fn(&(u32, u32)) -> _`
   |
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         F: FnMut(Self::Item) -> B,
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`

error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:9:14
   |
LL |     a.iter().map(|_: (u16, u16)| 45);
   |              ^^^ ------------------ found signature of `fn((u16, u16)) -> _`
   |              |
   |              expected signature of `fn(&(u32, u32)) -> _`
   |
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         F: FnMut(Self::Item) -> B,
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`

error: implementation of `Fn` is not general enough
  --> $DIR/closure-arg-type-mismatch.rs:14:5
   |
LL |     baz(f);
   |     ^^^ implementation of `Fn` is not general enough
   |
   = note: `fn(*mut &'a u32)` must implement `Fn<(*mut &'0 u32,)>`, for any lifetime `'0`...
   = note: ...but it actually implements `Fn<(*mut &'a u32,)>`

error: implementation of `FnOnce` is not general enough
  --> $DIR/closure-arg-type-mismatch.rs:14:5
   |
LL |     baz(f);
   |     ^^^ implementation of `FnOnce` is not general enough
   |
   = note: `fn(*mut &'a u32)` must implement `FnOnce<(*mut &'0 u32,)>`, for any lifetime `'0`...
   = note: ...but it actually implements `FnOnce<(*mut &'a u32,)>`

error: implementation of `Fn` is not general enough
  --> $DIR/closure-arg-type-mismatch.rs:14:5
   |
LL |     baz(f);
   |     ^^^ implementation of `Fn` is not general enough
   |
   = note: `fn(*mut &'a u32)` must implement `Fn<(*mut &'0 u32,)>`, for any lifetime `'0`...
   = note: ...but it actually implements `Fn<(*mut &'a u32,)>`

error: implementation of `FnOnce` is not general enough
  --> $DIR/closure-arg-type-mismatch.rs:14:5
   |
LL |     baz(f);
   |     ^^^ implementation of `FnOnce` is not general enough
   |
   = note: `fn(*mut &'a u32)` must implement `FnOnce<(*mut &'0 u32,)>`, for any lifetime `'0`...
   = note: ...but it actually implements `FnOnce<(*mut &'a u32,)>`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0631`.
